my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/WNDOCRA/T_WNDOCRA-struct.h
/* Generated by dmlc, do not edit! */

#ifndef T_WNDOCRA_STRUCT_H
#define T_WNDOCRA_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_WNDOCRA(void);


#endif /* not T_WNDOCRA_STRUCT_H */
